[package]
authors = ["Martin Svensson <hetast@gmail.com>"]
edition = "2018"
name = "for-actinius"
version = "0.1.0"

[dependencies]
actinius-icarus-bsp = {git = "https://github.com/macthestack/actinius-icarus"}
cortex-m = "*"
cortex-m-rt = "*"
cortex-m-rtic = "*"
heapless = "0.5.6"
nb = "0.1.1"
panic-reset = "0.1.0"
rtt-target = {version = "0.3.0", features = ["cortex-m"]}

[dependencies.void]
default-features = false
version = "1.0.2"

[[bin]]
bench = false
name = "for-actinius"
test = false

[profile.dev]
debug = true
incremental = false
lto = true
opt-level = 0

[profile.release]
debug = true
lto = true
opt-level = "s"
